tests/vertical-slice/accept/user_record_non_bitcopy.hew
// Accept fixture: concrete generic user aggregate with a heap-owning string
// field. Non-BitCopy user records now lower with drop coverage instead of the
// old UnsupportedUserRecordValueClass gate.
type Wrapper<T> {
    inner: T,
}

fn main() -> i64 {
    let w = Wrapper { inner: "owned" };
    0
}
