tests/vertical-slice/reject/user_record_non_bitcopy.hew
type Wrapper<T> {
    inner: T,
}

fn main() -> i64 {
    let w = Wrapper { inner: "owned" };
    0
}
